litteratur loop view fix

--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -299,9 +299,10 @@
                             <img class="" src="content/kobenhavnerbilleder-sten-simons.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Morgenfrost / Pieter MacLaine</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Københavnerbilleder</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Sten Simons</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -311,9 +312,10 @@
                             <img class="" src="content/the_unsplash_book_af_unsplash_community.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Frankrig / Guillaume Raoux</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 299.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">The Unsplash Book</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af The Unsplash Community</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -323,9 +325,10 @@
                             <img class="" src="content/the_polaroid_book_af_barbara_hitchcock.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Ørestad / Steffi Graf</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 99.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">The Polaroid Book</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Barbara Hitchcock</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -335,9 +338,10 @@
                             <img class="" src="content/read_this_if_you_want_to_take_great_photographs_af_henry_carroll.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Højbanen / Varte Meo</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Read This if You Want to Take Great Photographs</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Henry Carroll</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -347,9 +351,10 @@
                             <img class="" src="content/photographers_trouble_shooter_af_michael_freeman.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Højt på en gren / Edgar Poe</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 299.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Photographer's trouble shooter</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Michael Freeman</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -359,9 +364,10 @@
                             <img class="" src="content/rucksack_af_bernard_dubois.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Irland / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Rucksack</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Bernard Dubois</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -371,9 +377,10 @@
                             <img class="" src="content/thought_catalog_magazine.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Sverige / Göran Svensson</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Thought Catalouge</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Bent Nielsen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -383,9 +390,10 @@
                             <img class="" src="content/destination_pisserenden_af_bent_hubert.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Keep it simple / Andyax</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Destination pisserenden</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Bent Hubert</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
@@ -395,9 +403,10 @@
                             <img class="" src="content/streets_of_new_york_af_denise_richards.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Belgien / Magritte</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Streets of New York</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Denise Richards</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
                     </div>
                 </div>
 
