--- a/src/plakater.html
+++ b/src/plakater.html
@@ -299,9 +299,10 @@
                             <img class="" src="content/posters/poster-4.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Morgenfrost / Pieter MacLaine</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Morgenfrost</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Pieter MacLaine</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -311,9 +312,10 @@
                             <img class="" src="content/posters/poster-23.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Frankrig / Guillaume Raoux</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 299.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Frankrig</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Guillaume Raoux</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -323,9 +325,10 @@
                             <img class="" src="content/posters/poster.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Ørestad / Steffi Graf</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 99.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Ørestad</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Steffi Graf</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 99,-</p>
                     </div>
                 </div>
 
@@ -335,9 +338,10 @@
                             <img class="" src="content/posters/poster-2.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Højbanen / Varte Meo</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Højbanen</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Varte Meo</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -347,9 +351,10 @@
                             <img class="" src="content/posters/poster-3.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Højt på en gren / Edgar Poe</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 299.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Højt på en gren</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Edgar Poe</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299,-</p>
                     </div>
                 </div>
 
@@ -359,9 +364,10 @@
                             <img class="" src="content/posters/poster-24.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Irland / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Irland</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -371,9 +377,10 @@
                             <img class="" src="content/posters/poster-5.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Sverige / Göran Svensson</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Sverige</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Göran Svensson</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -383,9 +390,10 @@
                             <img class="" src="content/posters/poster-6.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Keep it simple / Andyax</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Keep it simple</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Andyax</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -395,9 +403,10 @@
                             <img class="" src="content/posters/poster-7.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Belgien / Magritte</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Belgien</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Magritte</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299,-</p>
                     </div>
                 </div>
 
@@ -407,9 +416,10 @@
                             <img class="" src="content/posters/poster-8.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Holbæk / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Holbæk</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -419,9 +429,10 @@
                             <img class="" src="content/posters/poster-9.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">De polske alper / Milla Jankovic</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">De polske alper</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Milla Jankovic</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -431,9 +442,10 @@
                             <img class="" src="content/posters/poster-11.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Vestenvind / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 499.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Vestenvind</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -443,9 +455,10 @@
                             <img class="" src="content/posters/poster-10.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Farvestik / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Farvestik</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -455,9 +468,10 @@
                             <img class="" src="content/posters/poster-12.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Pink / Chong Wang</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Pink</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Chong Wang</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -467,9 +481,10 @@
                             <img class="" src="content/posters/poster-13.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Ørken / Jill Meyers</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Ørken</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Jill Meyers</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -479,9 +494,10 @@
                             <img class="" src="content/posters/poster-14.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Semi-invers / Roger Christensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Semi-invers</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Roger Christensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -491,9 +507,10 @@
                             <img class="" src="content/posters/poster-22.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Himmelbjerget / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 99.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Himmelbjerget</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 99,-</p>
                     </div>
                 </div>
 
@@ -503,9 +520,10 @@
                             <img class="" src="content/posters/poster-15.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Vesterhavet / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Vesterhavet</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -515,9 +533,10 @@
                             <img class="" src="content/posters/poster-16.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Fugleflugt / Søren Mørkberg</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Fugleflugt</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Søren Mørkberg</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -527,9 +546,10 @@
                             <img class="" src="content/posters/poster-17.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Golden Gate / Jill Meyers</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 249.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Golden Gate</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Jill Meyers</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 249,-</p>
                     </div>
                 </div>
 
@@ -539,9 +559,10 @@
                             <img class="" src="content/posters/poster-18.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">På vej til Grisefest / Tom Jørgensen</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">På vej til Grisefest</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Tom Jørgensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -551,9 +572,10 @@
                             <img class="" src="content/posters/poster-19.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Skotland / Peter McLean</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Skotland</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Peter McLean</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -563,9 +585,10 @@
                             <img class="" src="content/posters/poster-20.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne I / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Færøerne</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
 
@@ -575,9 +598,10 @@
                             <img class="" src="content/posters/poster-21.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
-                    <div class="">
-                        <h2 class="text-xl text-gray-600 mt-4">Færøerne II / Turid Dagstad</h2>
-                        <p class="text-xl font-semibold text-gray-800  mt-2">Fra 199.-</p>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Færøerne II</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Turid Dagstad</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199,-</p>
                     </div>
                 </div>
             </div>
