--- a/src/produkt_plakat.html
+++ b/src/produkt_plakat.html
@@ -338,7 +338,7 @@
                 <!-- Options -->
                 <div class="mt-4 lg:mt-0 lg:row-span-3">
                     <h2 class="sr-only">Product information</h2>
-                    <p class="text-3xl text-gray-900">Fra 299.-</p>
+                    <p class="text-3xl text-gray-900">Fra 299,-</p>
 
                     <!-- Reviews -->
                     <div class="mt-6">
