--- a/src/litteratur.html
+++ b/src/litteratur.html
@@ -309,6 +309,45 @@
                 <div class="bg-gray-50  p-8">
                     <a href="produkt_bog.html">
                         <div class="flex justify-center items-center mt-4 md:mt-4">
+                            <img class="" src="content/milk-and-honey-rupi-kaur.jpg" alt="Flot plakat" role="img" />
+                        </div>
+                    </a>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Milk and honey</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Rupi Kaur</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199.-</p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50  p-8">
+                    <a href="produkt_bog.html">
+                        <div class="flex justify-center items-center mt-4 md:mt-4">
+                            <img class="" src="content/a-book-full-of-hope-arnold-andersson.jpg" alt="Flot plakat" role="img" />
+                        </div>
+                    </a>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">A book full of hope</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Arnold Andersson</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199.-</p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50  p-8">
+                    <a href="produkt_bog.html">
+                        <div class="flex justify-center items-center mt-4 md:mt-4">
+                            <img class="" src="content/psals_jesus_jensen.jpg" alt="Flot plakat" role="img" />
+                        </div>
+                    </a>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">Psalms</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Jesus Jensen</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 199.-</p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50  p-8">
+                    <a href="produkt_bog.html">
+                        <div class="flex justify-center items-center mt-4 md:mt-4">
                             <img class="" src="content/the_unsplash_book_af_unsplash_community.jpg" alt="Flot plakat" role="img" />
                         </div>
                     </a>
@@ -342,6 +381,19 @@
                         <h2 class="text-xl text-gray-600 mt-4">Read This if You Want to Take Great Photographs</h2>
                         <h3 class="text-base text-gray-500 mt-1">Af Henry Carroll</h3>
                         <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 299.-</p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50  p-8">
+                    <a href="produkt_bog.html">
+                        <div class="flex justify-center items-center mt-4 md:mt-4">
+                            <img class="" src="content/the-art-of-making-memories-alejandro-barba.jpg" alt="Flot plakat" role="img" />
+                        </div>
+                    </a>
+                    <div>
+                        <h2 class="text-xl text-gray-600 mt-4">The art of making memories</h2>
+                        <h3 class="text-base text-gray-500 mt-1">Af Alejandro Barba</h3>
+                        <p class="text-xl font-semibold text-gray-800 text-right mt-5">Fra 149.-</p>
                     </div>
                 </div>
 
