--- a/src/index.html
+++ b/src/index.html
@@ -286,12 +286,13 @@
               src="content/trae-poster.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                Plakater med naturen i fokus</p>
+              <h2 class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Plakater med naturen i fokus</h2>
+                <h3 class="text-base text-gray-500 mt-1">Af Brianna Wiest</h3>
             </div>
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
-                Fra 199.-</p>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl mt-5 font-semibold leading-5 text-gray-800 ">
+                Fra 199,-</p>
             </div>
           </div>
 
@@ -303,12 +304,13 @@
               src="content/rucksack_af_bernard_dubois.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                "Rucksack" af Bernard Dubois</p>
+              <h2 class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Rucksack af Denise Richards</h2>
+                <h3 class="text-base text-gray-500 mt-1">Af Bernard Dubois</h3>
             </div>
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
-                Fra 199.-</p>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl mt-5 font-semibold leading-5 text-gray-800 ">
+                Fra 199,-</p>
             </div>
           </div>
 
@@ -317,18 +319,18 @@
         <div
           class="group group-hover:bg-opacity-60 transition duration-500 relative bg-gray-50   sm:pt-28 sm:pb-8 px-8 pt-36 pb-36 flex justify-left">
           <a href="litteratur.html"><img class="group-hover:opacity-60 transition duration-500"
-              src="content/streets_of_new_york_af_denise_richards.jpg" alt="sofa-4" /></a>
+              src="content/salt-water-brianna-wiest.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                "Streets of New York" af Denise Richards</p>
+              <h2 class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Salt water af Denise Richards</h2>
+                <h3 class="text-base text-gray-500 mt-1">Af Brianna Wiest</h3>
             </div>
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
-                Fra 199.-</p>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl mt-5 font-semibold leading-5 text-gray-800 ">
+                Fra 199,-</p>
             </div>
           </div>
-
         </div>
 
         <div
@@ -337,12 +339,13 @@
               src="content/poster-sort-hvid.jpg" alt="sofa-4" /></a>
           <div class="absolute sm:top-8 top-4 left-4 sm:left-8 flex justify-start items-start flex-col space-y-2">
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
-                Sort/hvid</p>
+              <h2 class="group-hover:opacity-60 transition duration-500 text-xl leading-5 text-gray-600 ">
+                Sort/hvid</h2>
+                <h3 class="text-base text-gray-500 mt-1">Af Brianna Wiest</h3>
             </div>
             <div>
-              <p class="group-hover:opacity-60 transition duration-500 text-xl font-semibold leading-5 text-gray-800 ">
-                Fra 199.-</p>
+              <p class="group-hover:opacity-60 transition duration-500 text-xl mt-5 font-semibold leading-5 text-gray-800 ">
+                Fra 199,-</p>
             </div>
           </div>
 
